Fix Stack All Items button not working for Java 15 users